<resources>
    <string name="app_name">帮家团</string>
    <string name="tv_home">首页</string>
    <string name="tv_park">停车</string>sec
    <string name="tv_secretary">楼秘书</string>
    <string name="tv_mine">我的</string>
    <string name="tv_name">David Lee</string>
    <string name="tv_my_wallet">我的钱包</string>
    <string name="tv_my_bill">我的账单</string>
    <string name="tv_contact_service">联系客服</string>
    <string name="tv_idea">意见反馈</string>
    <string name="tv_about">关于我们</string>
    <string name="tv_setting">设置</string>
    <string name="tv_exit">退出登录</string>
    <string name="tv_secretary_door">·门禁管理·</string>
    <string name="tv_secretary_service">·服务管理·</string>
    <string name="tv_secretary_message">·信息交流·</string>
    <string name="tv_secretary_contact_us">·通讯录·</string>
    <string name="tv_park_my_car">我的车辆</string>
    <string name="tv_park_park_apply">停车申请</string>
    <string name="home_open_door">开门</string>
    <string name="home_work">工作台</string>
    <string name="home_visitor">访客</string>
    <string name="home_more_notice">查看更多公告</string>
    <string name="home_default_notice">国庆七天假期，国际互联网金融特区大厦国庆七天假期，国际互联网金融特区大厦国庆七天假期，国际互联网金融特区大厦国庆七天假期，国际互联网金融特区大厦国...</string>
    <string name="home_default_notice_title">国庆放假通知：</string>
    <string name="home_notice">公告</string>
    <string name="tv_login_title">让一切更简单</string>
    <string name="tv_login_phone_hint">手机号</string>
    <string name="tv_register_phone_hint">填写手机号</string>
    <string name="tv_verify_phone_hint">注册手机号</string>
    <string name="tv_login_password_hint">密码</string>
    <string name="tv_register_password_hint">输入登录密码</string>
    <string name="tv_modify_password_hint_1">新密码</string>
    <string name="tv_modify_password_hint_2">再次输入新密码</string>
    <string name="tv_register_verificationCode">填写验证码</string>
    <string name="tv_login_btn">登录</string>
    <string name="tv_register_btn">注册</string>
    <string name="tv_modify_btn">提交</string>
    <string name="tv_verify_btn">验证</string>
    <string name="tv_login_forget_password">忘记密码？</string>
    <string name="tv_register">新用户注册</string>
    <string name="tv_login_message_1">登录即代表阅读并同意</string>
    <string name="tv_login_message_2">《帮家团协议》</string>
    <string name="tv_register_message">注册即代表阅读并同意</string>
    <string name="tv_register_verificationCode_btn">获取验证码</string>
    <string name="tv_service_phone">客服热线：0851-84810969</string>
    <string name="tv_service_mail">电子邮箱：17385870269@163.com</string>
    <string name="tv_feed_back_hint">请输入具体反馈意见：</string>
    <string name="tv_about_message">\t\t贵州邦佳大数据科技有限公司2017年成立，坐落于贵州金融城-贵阳国际互联网金融特区，是贵阳市政府招商引资企业；是贵州智慧产业集团核心成员。 
         \n\n\t\t公司以智慧城市建设为中心，是一家集智慧园区（社区）服务、互联网平台建设、大数据产品开发、区块链研究为一体的创新型高科技企业。
        \n\n\t\t目前，公司依托强大的研发力量，以“互联网+园区”为切入点，推出了“帮家团”智慧园区综合管理大数据应用平台；同时以门禁、闸机、访客、停车场等系统设备销售安装为抓手，
        构筑智能化楼宇物联网体系，为广大物业公司和开发商客户提供了一款优秀的智能化掌上管理应用产品，解决了困扰他们的痛点问题。</string>
    <string name="tv_about_copyright">Copyright© 2018-2019 BangJia.All Rights Reserved\n贵州邦佳大数据科技有限公司</string>
    <string name="tv_about_web">官网：http://www.bangjiat.com/</string>
    <string name="tv_park_park_pay">停车缴费</string>
    <string name="tv_secretary_people">人员管理</string>
    <string name="tv_notice_default_message">国际互联网金融特区大厦国庆七天假期，国际互联网金融特区大厦国庆七天假期，国际互联网金融特区大厦国庆七天假期，国际互联网金融特区大厦国...</string>
    <string name="tv_notice_default_time">2018-03-24 16:54</string>
    <string name="tv_notice_default_title">国庆放假通知：</string>
    <string name="tv_visitor_agree">同意</string>
    <string name="tv_visitor_refuse">拒绝</string>
    <string name="personal_nickname">昵称</string>
    <string name="personal_nickname_default">David Lee</string>
    <string name="personal_sex">性别</string>
    <string name="personal_sex_default">男</string>
    <string name="personal_sex_default_1">女</string>
    <string name="personal_birthday">生日</string>
    <string name="personal_birthday_default">1978-02-11</string>
    <string name="personal_contact">联系方式</string>
    <string name="personal_phone">手机号</string>
    <string name="personal_phone_default">18188488288</string>
    <string name="personal_code">名片二维码</string>
    <string name="dialog_title">欢迎来到\n帮家团</string>
    <string name="add_company">新建公司</string>
    <string name="select_company">加入公司</string>
    <string name="dialog_message">亲，您需要先创建或加入一个公司哦！</string>
    <string name="company_add">加入公司</string>
    <string name="company_trade_default">软件开发</string>
    <string name="company_trade_title">所在行业：</string>
    <string name="company_title">公司名称：</string>
    <string name="company_title_default">贵州邦佳大数据科技有限公司</string>
    <string name="company_address">地址：</string>
    <string name="company_address_default">贵阳市观山湖区互联网金融特区大厦</string>
    <string name="door_apply_add_people">新增人员</string>
    <string name="door_apply_history">申请记录</string>
    <string name="apply_into_building">提交申请</string>
    <string name="apply_into_building_code">请填写邀请码</string>
    <string name="returns">返回</string>
    <string name="applying">审核中</string>
    <string name="applying_message">您的入驻楼宇申请已提交，我们将尽快为您处理</string>
    <string name="apply_fail">不通过</string>
    <string name="reapply">再次申请</string>
    <string name="apply_fail_message">很抱歉，您的入驻申请未通过</string>
    <string name="apply_contact_admin">联系管理员</string>
    <string name="apply_service_new">新的申请</string>
    <string name="submit">提交</string>
    <string name="approval_to">转批</string>
    <string name="send_email">发件箱</string>
    <string name="recive_email">收件箱</string>
    <string name="search">搜索</string>
    <string name="done">完成</string>
    <string name="add_photo">添加到邮件(%1$d)</string>
    <string name="work_kaoqin">考勤</string>
    <string name="work_off_work_apply">请假申请</string>
    <string name="work_permission">权限管理</string>
    <string name="work_workers">员工列表</string>
    <string name="delete_company">删除公司</string>
    <string name="exit_company">退出公司</string>
    <string name="kaoqin_setting">考勤设置</string>
    <string name="kaoqin_count">统计</string>
    <string name="kaoqin_daka">打卡</string>
    <string name="count_day">日统计</string>
    <string name="count_month">月统计</string>
    <string name="count_my">我的</string>
    <string name="count_day_progress">打卡人数/应到人数</string>
    <string name="count_day_progress_message">%1$d/%2$d</string>
    <string name="count">%1$d次</string>
    <string name="day">%1$d天</string>
    <string name="person">%1$d人</string>
    <string name="personal_id_number">身份证信息</string>
    <string name="personal_id_number_default">未验证</string>
    <string name="invite">被邀请</string>
    <string name="custom_content_text">%d/100</string>

    <string-array name="leave_type">
        <item>事假</item>
        <item>病假</item>
        <item>出差</item>
        <item>其他</item>
    </string-array>

    <string-array name="push">
        <item>加入公司</item>
        <item>权限更改</item>
        <item>系统公告</item>
        <item>楼宇公告</item>
        <item>已被公司管理员删除</item>
    </string-array>
</resources>
