<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.main.account.ui.LoginActivity">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="11dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="22dp"
        android:src="@mipmap/back_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="91dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/login_icon" />

        <ImageView
            android:layout_width="137dp"
            android:layout_height="37dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/login_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tv_login_title"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/register_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:src="@mipmap/ic_number" />

            <com.bangjiat.bjt.common.ClearEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:hint="@string/tv_register_phone_hint"
                android:inputType="phone"
                android:maxLength="11"
                android:textColor="@color/black"
                android:textColorHint="@color/register_hint"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/register_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:src="@mipmap/ic_pass" />

            <com.bangjiat.bjt.common.ClearEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:hint="@string/tv_register_password_hint"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/register_hint"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/register_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:src="@mipmap/ic_verificationcode" />

            <com.bangjiat.bjt.common.ClearEditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/tv_register_verificationCode"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/register_hint"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_getCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:text="@string/tv_register_verificationCode_btn"
                android:textColor="@color/mine_bg"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_btn_bg"
            android:text="@string/tv_register_btn"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_register_message"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="@string/tv_login_message_2"
                android:textColor="@color/mine_bg" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

